@@ -10,6 +10,7 @@ import org.arend.ext.core.definition.CoreClassField;
 import org.arend.naming.reference.FieldReferableImpl;
 import org.jetbrains.annotations.NotNull;
 
+import java.math.BigInteger;
 import java.util.Collections;
 import java.util.List;
 
@@ -18,10 +19,10 @@ public class ClassField extends CallableDefinition implements CoreClassField {
   private boolean myProperty;
   private PiExpression myType;
   private Expression myTypeLevel;
-  private int myResultTypeLevel = -2;
+  private BigInteger myResultTypeLevel;
   private int myNumberOfParameters;
   private boolean myHideable;
-  private UniverseKind myUniverseKind = UniverseKind.NO_UNIVERSES;
+  private boolean myInfinite;
 
   public ClassField(FieldReferableImpl referable, ClassDefinition parentClass) {
     super(referable, TypeCheckingStatus.NEEDS_TYPE_CHECKING);
@@ -33,6 +34,7 @@ public class ClassField extends CallableDefinition implements CoreClassField {
     myParentClass = parentClass;
     myType = type;
     myTypeLevel = typeLevel;
+    myInfinite = type.isInfinityLevel();
   }
 
   @Override
@@ -51,8 +53,13 @@ public class ClassField extends CallableDefinition implements CoreClassField {
     return myParentClass;
   }
 
+  public boolean isInfiniteField() {
+    return myInfinite;
+  }
+
   public void setType(PiExpression type) {
     myType = type;
+    myInfinite = type.isInfinityLevel();
   }
 
   public PiExpression getType(Levels levels) {
@@ -93,11 +100,11 @@ public class ClassField extends CallableDefinition implements CoreClassField {
     return myTypeLevel;
   }
 
-  public int getResultTypeLevel() {
+  public BigInteger getResultTypeLevel() {
     return myResultTypeLevel;
   }
 
-  public void setTypeLevel(Expression typeLevel, int level) {
+  public void setTypeLevel(Expression typeLevel, BigInteger level) {
     myTypeLevel = typeLevel;
     myResultTypeLevel = level;
   }
@@ -150,15 +157,6 @@ public class ClassField extends CallableDefinition implements CoreClassField {
   }
 
   @Override
-  public UniverseKind getUniverseKind() {
-    return myUniverseKind;
-  }
-
-  public void setUniverseKind(UniverseKind kind) {
-    myUniverseKind = kind;
-  }
-
-  @Override
   public <P, R> R accept(DefinitionVisitor<? super P, ? extends R> visitor, P params) {
     return visitor.visitField(this, params);
   }
@@ -178,6 +176,6 @@ public class ClassField extends CallableDefinition implements CoreClassField {
 
   @Override
   public Expression getDefCall(Levels levels, List<Expression> args) {
-    return FieldCallExpression.make(this, args.get(0));
+    return FieldCallExpression.make(this, args.getFirst());
   }
 }
