@@ -16,8 +16,6 @@ import org.arend.core.pattern.ConstructorExpressionPattern;
 import org.arend.core.pattern.ConstructorPattern;
 import org.arend.core.pattern.Pattern;
 import org.arend.core.subst.ExprSubstitution;
-import org.arend.ext.core.level.LevelSubstitution;
-import org.arend.core.subst.SubstVisitor;
 import org.arend.ext.core.body.CoreElimBody;
 import org.arend.ext.core.body.CorePattern;
 import org.arend.ext.core.context.CoreParameter;
@@ -58,7 +56,7 @@ public class ElimBody implements Body, CoreElimBody {
   }
 
   private static DependentLink copyDependentLink(DependentLink link, ExprSubstitution substitution, LinkList linkList) {
-    TypedDependentLink result = new TypedDependentLink(link.isExplicit(), link.getName(), link.getType().subst(new SubstVisitor(substitution, LevelSubstitution.EMPTY)), link.isHidden(), EmptyDependentLink.getInstance());
+    TypedDependentLink result = new TypedDependentLink(link.isExplicit(), link.getName(), link.getType().subst(substitution), link.isHidden(), EmptyDependentLink.getInstance());
     linkList.append(result);
     substitution.add(link, new ReferenceExpression(result));
     return result;
@@ -86,37 +84,35 @@ public class ElimBody implements Body, CoreElimBody {
       int originalSize1 = clauseElems.size();
       BranchElimTree branchElimTree = (BranchElimTree) elimTree;
       for (BranchKey key : branchElimTree.getKeys()) {
-        Expression type = TypeConstructorExpression.unfoldType(param.getTypeExpr().subst(substitution));
+        Expression type = TypeConstructorExpression.unfoldType(param.getType().subst(substitution));
         List<DependentLink> newParams = new ArrayList<>();
 
         ConstructorExpressionPattern conPattern;
         if (key instanceof Constructor) {
-          if (!(type instanceof DataCallExpression)) {
+          if (!(type instanceof DataCallExpression dataCall)) {
             throw new IllegalArgumentException();
           }
-          boolean isFin = ((DataCallExpression) type).getDefinition() == Prelude.FIN;
+          boolean isFin = dataCall.getDefinition() == Prelude.FIN;
           Constructor constructor = isFin && key == Prelude.ZERO ? Prelude.FIN_ZERO : isFin && key == Prelude.SUC ? Prelude.FIN_SUC : (Constructor) key;
           List<ConCallExpression> conCalls = new ArrayList<>(1);
-          ((DataCallExpression) type).getMatchedConCall(constructor, conCalls);
+          dataCall.getMatchedConCall(constructor, conCalls);
           if (conCalls.isEmpty()) {
             if (constructor.status() == Definition.TypeCheckingStatus.NO_ERRORS) {
               throw new IllegalArgumentException();
             }
             continue;
           }
-          DataCallExpression dataCall = (DataCallExpression) type;
           conPattern = new ConstructorExpressionPattern(new ConCallExpression(constructor, dataCall.getLevels(), dataCall.getDefCallArguments(), Collections.emptyList()), Collections.emptyList());
           clauseElems.add(new Util.ConstructorClauseElem(constructor, dataCall.getLevels(), dataCall.getDefCallArguments()));
-          newParams.addAll(DependentLink.Helper.toList(DependentLink.Helper.subst(constructor.getParameters(), new ExprSubstitution().add(constructor.getDataTypeParameters(), conCalls.get(0).getDataTypeArguments()), conCalls.get(0).getLevelSubstitution())));
+          newParams.addAll(DependentLink.Helper.toList(DependentLink.Helper.subst(constructor.getParameters(), new ExprSubstitution().add(constructor.getDataTypeParameters(), conCalls.getFirst().getDataTypeArguments()), conCalls.getFirst().getLevelSubstitution())));
         } else if (key instanceof IdpConstructor) {
           conPattern = ConstructorPattern.make(Prelude.IDP, Collections.emptyList()).toExpressionPattern(type);
           clauseElems.add(new Util.PatternClauseElem(conPattern));
         } else if (key instanceof ArrayConstructor) {
-          if (!(type instanceof ClassCallExpression)) {
+          if (!(type instanceof ClassCallExpression classCall)) {
             throw new IllegalArgumentException();
           }
-          ClassCallExpression classCall = (ClassCallExpression) type;
-          var elem = new Util.ArrayClauseElem(((ArrayConstructor) key).getConstructor(), classCall.getLevels().toLevelPair(), classCall.getAbsImplementationHere(Prelude.ARRAY_LENGTH), classCall.getThisBinding(), classCall.getAbsImplementationHere(Prelude.ARRAY_ELEMENTS_TYPE), ConstructorExpressionPattern.isArrayEmpty(classCall));
+          var elem = new Util.ArrayClauseElem(((ArrayConstructor) key).getConstructor(), classCall.getAbsImplementationHere(Prelude.ARRAY_LENGTH), classCall.getThisBinding(), classCall.getAbsImplementationHere(Prelude.ARRAY_ELEMENTS_TYPE), ConstructorExpressionPattern.isArrayEmpty(classCall));
           conPattern = elem.getPattern(Collections.emptyList());
           clauseElems.add(elem);
           newParams.addAll(DependentLink.Helper.toList(elem.getParameters()));
