@@ -3,15 +3,12 @@ package org.arend.core.expr;
 import org.arend.core.context.param.DependentLink;
 import org.arend.core.definition.Constructor;
 import org.arend.core.definition.DataDefinition;
-import org.arend.core.expr.type.Type;
 import org.arend.core.expr.visitor.ExpressionVisitor;
 import org.arend.core.expr.visitor.ExpressionVisitor2;
-import org.arend.core.expr.visitor.NormalizeVisitor;
-import org.arend.core.expr.visitor.StripVisitor;
+import org.arend.core.expr.visitor.GetTypeVisitor;
 import org.arend.core.pattern.ExpressionPattern;
-import org.arend.core.sort.Sort;
+import org.arend.core.sort.SortExpression;
 import org.arend.core.subst.ExprSubstitution;
-import org.arend.core.subst.InPlaceLevelSubstVisitor;
 import org.arend.core.subst.Levels;
 import org.arend.ext.core.context.CoreParameter;
 import org.arend.ext.core.definition.CoreConstructor;
@@ -27,7 +24,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-public class DataCallExpression extends LeveledDefCallExpression implements Type, CoreDataCallExpression {
+public class DataCallExpression extends LeveledDefCallExpression implements CoreDataCallExpression {
   private final List<Expression> myArguments;
 
   private DataCallExpression(DataDefinition definition, Levels levels, List<Expression> arguments) {
@@ -53,9 +50,8 @@ public class DataCallExpression extends LeveledDefCallExpression implements Type
     return (DataDefinition) super.getDefinition();
   }
 
-  @Override
-  public @NotNull Expression minimizeLevels() {
-    return new DataCallExpression(getDefinition(), getMinimizedLevels(), myArguments);
+  public SortExpression getSortExpression() {
+    return getDefinition().getSortExpression().subst(getDefCallArguments(), getLevelSubstitution(), GetTypeVisitor.INSTANCE);
   }
 
   @Override
@@ -71,32 +67,6 @@ public class DataCallExpression extends LeveledDefCallExpression implements Type
   @Override
   public <P, R> R accept(@NotNull CoreExpressionVisitor<? super P, ? extends R> visitor, P params) {
     return visitor.visitDataCall(this, params);
-  }
-
-  @Override
-  public Expression getExpr() {
-    return this;
-  }
-
-  @Override
-  public Sort getSortOfType() {
-    return getDefinition().getSort().subst(getLevelSubstitution());
-  }
-
-  @Override
-  public void subst(InPlaceLevelSubstVisitor substVisitor) {
-    substVisitor.visitDataCall(this, null);
-  }
-
-  @Override
-  public DataCallExpression strip(StripVisitor visitor) {
-    return visitor.visitDataCall(this, null);
-  }
-
-  @NotNull
-  @Override
-  public DataCallExpression normalize(@NotNull NormalizationMode mode) {
-    return NormalizeVisitor.INSTANCE.visitDataCall(this, mode);
   }
 
   @Override
@@ -188,12 +158,12 @@ public class DataCallExpression extends LeveledDefCallExpression implements Type
     if (constructor.getPatterns() != null) {
       List<Expression> arguments = myArguments;
       if (constructor == Prelude.FIN_SUC) {
-        Expression arg = arguments.get(0).normalize(NormalizationMode.WHNF);
+        Expression arg = arguments.getFirst().normalize(NormalizationMode.WHNF);
         if (arg instanceof IntegerExpression && ((IntegerExpression) arg).isOne()) {
           return true;
         }
         if (arg instanceof ConCallExpression && ((ConCallExpression) arg).getDefinition() == Prelude.SUC) {
-          Expression argArg = ((ConCallExpression) arg).getDefCallArguments().get(0).normalize(NormalizationMode.WHNF);
+          Expression argArg = ((ConCallExpression) arg).getDefCallArguments().getFirst().normalize(NormalizationMode.WHNF);
           if (argArg instanceof IntegerExpression && ((IntegerExpression) argArg).isZero()) {
             return true;
           }
