@@ -1,22 +1,15 @@
 package org.arend.core.expr.visitor;
 
-import org.arend.core.context.binding.LevelVariable;
 import org.arend.core.context.param.DependentLink;
-import org.arend.core.definition.ClassDefinition;
 import org.arend.core.definition.ClassField;
 import org.arend.core.definition.FunctionDefinition;
-import org.arend.core.definition.UniverseKind;
 import org.arend.core.expr.*;
 import org.arend.core.expr.let.HaveClause;
 import org.arend.core.expr.let.LetClause;
-import org.arend.core.sort.Level;
-import org.arend.core.sort.Sort;
+import org.arend.core.sort.SortExpression;
 import org.arend.core.subst.ExprSubstitution;
-import org.arend.core.subst.LevelPair;
 import org.arend.core.subst.Levels;
-import org.arend.core.subst.ListLevels;
 import org.arend.ext.core.level.LevelSubstitution;
-import org.arend.ext.core.ops.CMP;
 import org.arend.ext.core.ops.NormalizationMode;
 import org.arend.prelude.Prelude;
 import org.arend.util.SingletonList;
@@ -26,177 +19,23 @@ import java.util.*;
 import static org.arend.core.expr.ExpressionFactory.*;
 
 public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
-  public final static GetTypeVisitor INSTANCE = new GetTypeVisitor(true, false);
-  public final static GetTypeVisitor NN_INSTANCE = new GetTypeVisitor(false, false);
-  public final static GetTypeVisitor MIN_INSTANCE = new GetTypeVisitor(true, true);
+  public final static GetTypeVisitor INSTANCE = new GetTypeVisitor(true);
+  public final static GetTypeVisitor NN_INSTANCE = new GetTypeVisitor(false);
 
   private final boolean myNormalizing;
-  private final boolean myMinimal;
 
-  private GetTypeVisitor(boolean normalizing, boolean minimal) {
+  private GetTypeVisitor(boolean normalizing) {
     myNormalizing = normalizing;
-    myMinimal = minimal;
+  }
+
+  GetTypeVisitor() {
+    this(true);
   }
 
   @Override
   public Expression visitApp(AppExpression expr, Void params) {
     Expression result = expr.getFunction().accept(this, null).applyExpression(expr.getArgument(), myNormalizing);
     return result == null ? new ErrorExpression() : result;
-  }
-
-  private Level getMaxLevel(Level level1, Level level2) {
-    return level2 == null ? level1 : level2.max(level1);
-  }
-
-  private boolean matchLevels(Levels paramLevels, Levels argLevels, Map<LevelVariable, Level> levelMap) {
-    List<? extends Level> paramList = paramLevels.toList();
-    List<? extends Level> argList = argLevels.toList();
-    if (paramList.size() != argList.size()) {
-      return false;
-    }
-    for (int i = 0; i < paramList.size(); i++) {
-      if (paramList.get(i).getVar() != null) {
-        Level level = getMaxLevel(argList.get(i), levelMap.get(paramList.get(i).getVar()));
-        if (level == null) {
-          return false;
-        }
-        levelMap.put(paramList.get(i).getVar(), level);
-      }
-    }
-    return true;
-  }
-
-  private boolean matchArguments(Expression paramType, Expression argType, Map<LevelVariable, Level> levelMap) {
-    int skip = 0;
-    while (paramType instanceof PiExpression) {
-      skip += DependentLink.Helper.size(((PiExpression) paramType).getParameters());
-      paramType = ((PiExpression) paramType).getCodomain();
-    }
-
-    if (paramType instanceof UniverseExpression) {
-      argType = argType.dropPiParameter(skip);
-      argType = argType == null ? null : argType.normalize(NormalizationMode.WHNF);
-      if (!(argType instanceof UniverseExpression)) {
-        return false;
-      }
-      Sort paramSort = ((UniverseExpression) paramType).getSort();
-      Sort argSort = ((UniverseExpression) argType).getSort();
-      return matchLevels(new LevelPair(paramSort.getPLevel(), paramSort.getHLevel()), new LevelPair(argSort.getPLevel(), argSort.getHLevel()), levelMap);
-    } else if (paramType instanceof SigmaExpression) {
-      argType = argType.dropPiParameter(skip);
-      argType = argType == null ? null : argType.normalize(NormalizationMode.WHNF);
-      if (!(argType instanceof SigmaExpression)) {
-        return false;
-      }
-      DependentLink paramParam = ((SigmaExpression) paramType).getParameters();
-      DependentLink argParam = ((SigmaExpression) argType).getParameters();
-      while (paramParam.hasNext() && argParam.hasNext()) {
-        if (!matchArguments(paramParam.getTypeExpr(), argParam.getTypeExpr(), levelMap)) {
-          return false;
-        }
-        paramParam = paramParam.getNext();
-        argParam = argParam.getNext();
-      }
-      return !(paramParam.hasNext() || argParam.hasNext());
-    } else if (paramType instanceof ClassCallExpression paramClassCall) {
-      argType = argType.dropPiParameter(skip);
-      argType = argType == null ? null : argType.normalize(NormalizationMode.WHNF);
-      if (!(argType instanceof ClassCallExpression argClassCall)) {
-        return false;
-      }
-      if (paramClassCall.getUniverseKind() != UniverseKind.NO_UNIVERSES && !matchLevels(paramClassCall.getLevels(), minimizeLevelsToSuperClass(argClassCall, paramClassCall.getDefinition()), levelMap)) {
-        return false;
-      }
-      for (Map.Entry<ClassField, Expression> entry : paramClassCall.getImplementedHere().entrySet()) {
-        Expression argImpl = argClassCall.getAbsImplementationHere(entry.getKey());
-        if (argImpl == null || !matchArguments(entry.getValue(), argImpl, levelMap)) {
-          return false;
-        }
-      }
-      return true;
-    } else {
-      return true;
-    }
-  }
-
-  private boolean isMinimalLevels(LeveledDefCallExpression defCall) {
-    Levels levels = defCall.getLevels();
-    if (levels.size() == 0) return true;
-    if (defCall.getDefinition().getLevelParameters() == null) {
-      return false;
-    }
-
-    List<? extends LevelVariable> params = defCall.getDefinition().getLevelParameters();
-    List<? extends Level> list = levels.toList();
-    if (list.size() > params.size()) {
-      return false;
-    }
-    for (int i = 0; i < list.size(); i++) {
-      if (!(list.get(i).isClosed() && list.get(i).getConstant() == params.get(i).getMinValue())) {
-        return false;
-      }
-    }
-    return true;
-  }
-
-  public Levels minimizeLevels(LeveledDefCallExpression defCall) {
-    if (!(defCall.getUniverseKind() == UniverseKind.NO_UNIVERSES && defCall.getDefinition() != Prelude.DIV_MOD && defCall.getDefinition() != Prelude.MOD && !(defCall instanceof ConCallExpression)) || isMinimalLevels(defCall)) {
-      return defCall.getLevels();
-    }
-    boolean ok = true;
-    Map<LevelVariable, Level> levelMap = new HashMap<>();
-    if (defCall instanceof ClassCallExpression classCall) {
-      Levels idLevels = classCall.getDefinition().makeIdLevels();
-      for (Map.Entry<ClassField, Expression> entry : classCall.getImplementedHere().entrySet()) {
-        ClassField field = entry.getKey();
-        if (classCall.getDefinition().isOmegaField(field)) {
-          Levels superLevels = classCall.getDefinition().getSuperLevels().get(field.getParentClass());
-          if (superLevels == null) superLevels = idLevels;
-          ok = matchArguments(field.getResultType().subst(superLevels.makeSubstitution(field)), entry.getValue().accept(this, null), levelMap);
-          if (!ok) break;
-        }
-      }
-    } else {
-      DependentLink param = defCall.getDefinition().getParameters();
-      List<? extends Expression> defCallArguments = defCall.getDefCallArguments();
-      for (int i = 0; i < defCallArguments.size(); i++) {
-        ok = !defCall.getDefinition().isOmegaParameter(i) || matchArguments(param.getTypeExpr(), defCallArguments.get(i).accept(this, null), levelMap);
-        if (!ok) break;
-        param = param.getNext();
-      }
-    }
-
-    Levels levels = defCall.getLevels();
-    if (ok) {
-      if (defCall.getDefinition().getLevelParameters() == null) {
-        Level pLevel = levelMap.get(LevelVariable.PVAR);
-        Level hLevel = levelMap.get(LevelVariable.HVAR);
-        levels = new LevelPair(pLevel == null ? new Level(0) : pLevel, hLevel == null ? new Level(-1) : hLevel);
-      } else {
-        List<Level> list = new ArrayList<>();
-        List<? extends LevelVariable> vars = defCall.getDefinition().getLevelParameters();
-        for (LevelVariable var : vars) {
-          Level level = levelMap.get(var);
-          list.add(level == null ? new Level(var.getMinValue()) : level);
-        }
-        for (int i = 0; i < list.size() - 1; i++) {
-          Level maxLevel = list.get(i).max(list.get(i + 1));
-          if (maxLevel == null) {
-            ok = false;
-            break;
-          }
-          if (vars.get(i).compare(vars.get(i + 1), CMP.LE)) {
-            list.set(i + 1, maxLevel);
-          } else {
-            list.set(i, maxLevel);
-          }
-        }
-        if (ok) {
-          levels = new ListLevels(list);
-        }
-      }
-    }
-    return levels;
   }
 
   @Override
@@ -215,50 +54,26 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
     }
 
     List<DependentLink> defParams = new ArrayList<>();
-    Expression type = definition.getTypeWithParams(defParams, myMinimal ? minimizeLevels(expr) : expr.getLevels());
+    Expression type = definition.getTypeWithParams(defParams, expr.getLevels());
     assert arguments.size() == defParams.size();
-    return type.subst(DependentLink.Helper.toSubstitution(defParams, arguments));
+
+    if (type instanceof UniverseExpression universe) {
+      return new UniverseExpression(universe.getSortExpression().subst(arguments, LevelSubstitution.EMPTY, this));
+    } else {
+      return type.subst(DependentLink.Helper.toSubstitution(defParams, arguments));
+    }
   }
 
   @Override
   public UniverseExpression visitDataCall(DataCallExpression expr, Void params) {
-    return new UniverseExpression(expr.getDefinition().getSort().subst((myMinimal ? minimizeLevels(expr) : expr.getLevels()).makeSubstitution(expr.getDefinition())));
-  }
-
-  private Levels minimizeLevelsToSuperClass(ClassCallExpression classCall, ClassDefinition superClass) {
-    if (isMinimalLevels(classCall)) {
-      return classCall.getLevels(superClass);
-    }
-
-    Levels argLevels = classCall.getLevels(superClass);
-    if (argLevels != classCall.getLevels() && classCall.getUniverseKind() == UniverseKind.NO_UNIVERSES) {
-      Map<ClassField, Expression> impls = new LinkedHashMap<>();
-      ClassCallExpression newClassCall = new ClassCallExpression(superClass, argLevels, impls, classCall.getSort(), UniverseKind.NO_UNIVERSES);
-      for (Map.Entry<ClassField, AbsExpression> entry : classCall.getDefinition().getImplemented()) {
-        if (entry.getKey().getUniverseKind() != UniverseKind.NO_UNIVERSES && superClass.isSubClassOf(entry.getKey().getParentClass())) {
-          impls.put(entry.getKey(), entry.getValue().apply(new ReferenceExpression(classCall.getThisBinding()), LevelSubstitution.EMPTY).accept(new FieldCallSubstVisitor(classCall, new ReferenceExpression(newClassCall.getThisBinding())), null));
-        }
-      }
-      for (Map.Entry<ClassField, Expression> entry : classCall.getImplementedHere().entrySet()) {
-        if (entry.getKey().getUniverseKind() != UniverseKind.NO_UNIVERSES && superClass.isSubClassOf(entry.getKey().getParentClass())) {
-          impls.put(entry.getKey(), entry.getValue().subst(classCall.getThisBinding(), new ReferenceExpression(newClassCall.getThisBinding())));
-        }
-      }
-      return minimizeLevels(newClassCall);
-    } else {
-      return classCall.getDefinition().castLevels(superClass, minimizeLevels(classCall));
-    }
+    return new UniverseExpression(expr.getDefinition().getSortExpression().subst(expr.getDefCallArguments(), expr.getLevels().makeSubstitution(expr.getDefinition()), this));
   }
 
   public Expression getFieldCallType(ClassField field, ClassCallExpression type, Expression argument) {
     if (type.getDefinition().getOverriddenType(field) != null) {
-      return type.getDefinition().getOverriddenType(field, myMinimal ? minimizeLevels(type) : type.getLevels()).applyExpression(argument);
+      return type.getDefinition().getOverriddenType(field, type.getLevels()).applyExpression(argument);
     }
-    if (myMinimal) {
-      return field.getType(minimizeLevelsToSuperClass(type, field.getParentClass())).applyExpression(argument);
-    } else {
-      return field.getType(type.getDefinition().castLevels(field.getParentClass(), type.getLevels())).applyExpression(argument);
-    }
+    return type.getFieldType(field, argument);
   }
 
   @Override
@@ -268,6 +83,12 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
       type = type.normalize(NormalizationMode.WHNF);
     }
     if (type instanceof ClassCallExpression classCall && classCall.getDefinition().isSubClassOf(expr.getDefinition().getParentClass())) {
+      if (expr.getDefinition().isInfiniteField()) {
+        Expression normExpr = NormalizeVisitor.INSTANCE.evalFieldCall(expr.getDefinition(), expr.getArgument());
+        if (normExpr != null) {
+          return normExpr.accept(this, null);
+        }
+      }
       return getFieldCallType(expr.getDefinition(), classCall, expr.getArgument());
     }
     return new ErrorExpression();
@@ -277,16 +98,16 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
   public DataCallExpression visitConCall(ConCallExpression expr, Void params) {
     if (expr.getDefinition() == Prelude.SUC) {
       int sucs = 1;
-      Expression expression = expr.getDefCallArguments().get(0);
+      Expression expression = expr.getDefCallArguments().getFirst();
       while (expression instanceof ConCallExpression && ((ConCallExpression) expression).getDefinition() == Prelude.SUC) {
         sucs++;
-        expression = ((ConCallExpression) expression).getDefCallArguments().get(0);
+        expression = ((ConCallExpression) expression).getDefCallArguments().getFirst();
       }
       Expression argType = expression.accept(this, null);
       if (myNormalizing) argType = argType.normalize(NormalizationMode.WHNF);
       DataCallExpression dataCall = argType.cast(DataCallExpression.class);
       if (dataCall != null && dataCall.getDefinition() == Prelude.FIN) {
-        Expression arg = dataCall.getDefCallArguments().get(0);
+        Expression arg = dataCall.getDefCallArguments().getFirst();
         for (int i = 0; i < sucs; i++) {
           arg = Suc(arg);
         }
@@ -299,12 +120,13 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
 
   @Override
   public Expression visitClassCall(ClassCallExpression expr, Void params) {
-    return new UniverseExpression(expr.getSort().subst((myMinimal ? minimizeLevels(expr) : expr.getLevels()).makeSubstitution(expr.getDefinition())));
+    SortExpression sort = expr.getDefinition().computeSort(expr.getImplementedHere(), expr.getThisBinding(), expr.getLevels(), expr.getLevelSubstitution(), false, this);
+    return sort == null ? new ErrorExpression() : new UniverseExpression(sort);
   }
 
   @Override
   public Expression visitReference(ReferenceExpression expr, Void params) {
-    return expr.getBinding().getTypeExpr();
+    return expr.getBinding().getType();
   }
 
   @Override
@@ -319,34 +141,34 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
 
   @Override
   public Expression visitLam(LamExpression expr, Void ignored) {
-    return new PiExpression(expr.getResultSort(), expr.getParameters(), expr.getBody().accept(this, null));
+    return new PiExpression(expr.getParameters(), expr.getBody().accept(this, null));
   }
 
   @Override
   public Expression visitPi(PiExpression expr, Void params) {
-    Sort sort1 = expr.getParameters().getTypeExpr().accept(this, null).toSort();
-    Sort sort2 = sort1 == null ? null : expr.getCodomain().accept(this, null).toSort();
-    Level maxPLevel = sort2 == null ? null : sort1.getPLevel().max(sort2.getPLevel());
-    return new UniverseExpression(maxPLevel == null ? expr.getResultSort() : new Sort(maxPLevel, sort2.getHLevel()));
+    SortExpression sort1 = expr.getParameters().getType().accept(this, null).toSortExpression();
+    SortExpression sort2 = expr.getCodomain().accept(this, null).toSortExpression();
+    return sort1 == null || sort2 == null ? new ErrorExpression() : new UniverseExpression(SortExpression.makePi(sort1, sort2));
   }
 
   @Override
   public Expression visitSigma(SigmaExpression expr, Void params) {
-    Sort maxSort = Sort.PROP;
+    List<SortExpression> sorts = new ArrayList<>();
     for (DependentLink param = expr.getParameters(); param.hasNext(); param = param.getNext()) {
       param = param.getNextTyped(null);
-      Sort sort = param.getTypeExpr().accept(this, null).toSort();
-      maxSort = sort == null ? null : maxSort.max(sort);
-      if (maxSort == null) {
-        break;
+      Expression type = param.getType().accept(this, null);
+      SortExpression sort = type.toSortExpression();
+      if (sort == null) {
+        return new ErrorExpression();
       }
+      sorts.add(sort);
     }
-    return new UniverseExpression(maxSort == null ? expr.getSort() : maxSort);
+    return new UniverseExpression(SortExpression.makeMax(sorts));
   }
 
   @Override
   public Expression visitUniverse(UniverseExpression expr, Void params) {
-    return new UniverseExpression(expr.getSort().succ());
+    return new UniverseExpression(SortExpression.makeSucc(expr.getSortExpression()));
   }
 
   @Override
@@ -373,7 +195,7 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
 
     DependentLink params = ((SigmaExpression) type).getParameters();
     if (expr.getField() == 0) {
-      return params.getTypeExpr();
+      return params.getType();
     }
 
     ExprSubstitution subst = new ExprSubstitution();
@@ -381,7 +203,7 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
       subst.add(params, ProjExpression.make(expr.getExpression(), i, params.isProperty()));
       params = params.getNext();
     }
-    return params.getTypeExpr().subst(subst);
+    return params.getType().subst(subst);
   }
 
   @Override
@@ -466,14 +288,14 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
       implementations.put(Prelude.ARRAY_LENGTH, length);
     }
     implementations.put(Prelude.ARRAY_ELEMENTS_TYPE, expr.getElementsType());
-    return new ClassCallExpression(Prelude.DEP_ARRAY, expr.getLevels(), implementations, Sort.STD, UniverseKind.NO_UNIVERSES);
+    return new ClassCallExpression(Prelude.DEP_ARRAY, Levels.EMPTY, implementations);
   }
 
   @Override
   public Expression visitPath(PathExpression expr, Void params) {
     Expression left = AppExpression.make(expr.getArgument(), ExpressionFactory.Left(), true);
     Expression right = AppExpression.make(expr.getArgument(), ExpressionFactory.Right(), true);
-    return DataCallExpression.make(Prelude.PATH, expr.getLevels(), Arrays.asList(expr.getArgumentType(), left, right));
+    return DataCallExpression.make(Prelude.PATH, Levels.EMPTY, Arrays.asList(expr.getArgumentType(), left, right));
   }
 
   @Override
@@ -483,7 +305,7 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
     if (!(type instanceof DataCallExpression && ((DataCallExpression) type).getDefinition() == Prelude.PATH)) {
       return type instanceof ErrorExpression ? type : new ErrorExpression();
     }
-    return AppExpression.make(((DataCallExpression) type).getDefCallArguments().get(0), expr.getIntervalArgument(), true);
+    return AppExpression.make(((DataCallExpression) type).getDefCallArguments().getFirst(), expr.getIntervalArgument(), true);
   }
 
   @Override
@@ -493,17 +315,11 @@ public class GetTypeVisitor implements ExpressionVisitor<Void, Expression> {
       return new ErrorExpression();
     }
 
-    Expression type = expr.getExpression().accept(this, null);
-    Sort sort = type.getSortOfType();
-    if (sort == null) {
-      return new ErrorExpression();
-    }
-
     List<Expression> args = new ArrayList<>(3);
-    args.add(type);
+    args.add(expr.getExpression().accept(this, null));
     args.add(expr.getExpression());
     args.add(normExpr);
-    return FunCallExpression.make(Prelude.PATH_INFIX, new LevelPair(sort.getPLevel(), sort.getHLevel()), args);
+    return FunCallExpression.make(Prelude.PATH_INFIX, Levels.EMPTY, args);
   }
 
   @Override
