@@ -6,7 +6,6 @@ import org.arend.core.context.param.EmptyDependentLink;
 import org.arend.core.definition.*;
 import org.arend.core.expr.*;
 import org.arend.core.expr.visitor.NormalizingFindBindingVisitor;
-import org.arend.core.sort.Sort;
 import org.arend.core.subst.ExprSubstitution;
 import org.arend.core.subst.Levels;
 import org.arend.ext.core.level.LevelSubstitution;
@@ -134,7 +133,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
 
   public Expression getArrayLength() {
     Expression dataExpr = getDataExpression();
-    return dataExpr instanceof FunCallExpression funCall && funCall.getDefinition() == Prelude.ARRAY_CONS && !funCall.getDefCallArguments().isEmpty() ? funCall.getDefCallArguments().get(0) : null;
+    return dataExpr instanceof FunCallExpression funCall && funCall.getDefinition() == Prelude.ARRAY_CONS && !funCall.getDefCallArguments().isEmpty() ? funCall.getDefCallArguments().getFirst() : null;
   }
 
   public Binding getArrayThisBinding() {
@@ -171,7 +170,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
 
     DefCallExpression defCall = (DefCallExpression) dataExpr;
     if (defCall.getDefinition() == Prelude.EMPTY_ARRAY || defCall.getDefinition() == Prelude.ARRAY_CONS) {
-      return ((DConstructor) defCall.getDefinition()).getArrayParameters(getLevels().toLevelPair(), getArrayLength(), getArrayThisBinding(), getArrayElementsType());
+      return ((DConstructor) defCall.getDefinition()).getArrayParameters(getArrayLength(), getArrayThisBinding(), getArrayElementsType());
     } else {
       return defCall.getDefinition().getParameters();
     }
@@ -205,7 +204,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
     if (dataExpr instanceof FunCallExpression funCall) {
       List<Expression> newArgs;
       if (funCall.getDefinition() == Prelude.EMPTY_ARRAY) {
-        return ArrayExpression.make(funCall.getLevels().toLevelPair(), funCall.getDefCallArguments().isEmpty() ? arguments.get(0) : funCall.getDefCallArguments().get(0), Collections.emptyList(), null);
+        return ArrayExpression.make(funCall.getDefCallArguments().isEmpty() ? arguments.getFirst() : funCall.getDefCallArguments().getFirst(), Collections.emptyList(), null);
       }
       if (!funCall.getDefCallArguments().isEmpty()) {
         newArgs = new ArrayList<>(funCall.getDefCallArguments().size() + arguments.size());
@@ -228,7 +227,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
 
     ClassCallExpression classCall = (ClassCallExpression) dataExpr;
     Map<ClassField, Expression> implementations = new LinkedHashMap<>();
-    ClassCallExpression resultClassCall = new ClassCallExpression(classCall.getDefinition(), classCall.getLevels(), implementations, Sort.PROP, UniverseKind.NO_UNIVERSES);
+    ClassCallExpression resultClassCall = new ClassCallExpression(classCall.getDefinition(), classCall.getLevels(), implementations);
     resultClassCall.copyImplementationsFrom(classCall);
     int i = 0;
     for (ClassField field : classCall.getDefinition().getNotImplementedFields()) {
@@ -259,7 +258,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
       }
       arguments.add(argument);
     }
-    return (dataExpr instanceof ClassCallExpression ? new ConstructorExpressionPattern(new SigmaExpression(Sort.PROP, getParameters()), getSubPatterns()) : this).toExpression(arguments);
+    return (dataExpr instanceof ClassCallExpression ? new ConstructorExpressionPattern(new SigmaExpression(getParameters()), getSubPatterns()) : this).toExpression(arguments);
   }
 
   @Override
@@ -308,7 +307,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
           if (length != null) {
             if (length instanceof IntegerExpression && !((IntegerExpression) length).isZero() || length instanceof ConCallExpression && ((ConCallExpression) length).getDefinition() == Prelude.SUC) {
               List<Expression> result = new ArrayList<>(4);
-              if (getArrayLength() == null) result.add(length instanceof IntegerExpression intExpr ? intExpr.pred() : ((ConCallExpression) length).getDefCallArguments().get(0));
+              if (getArrayLength() == null) result.add(length instanceof IntegerExpression intExpr ? intExpr.pred() : ((ConCallExpression) length).getDefCallArguments().getFirst());
               Expression elementsType = FieldCallExpression.make(Prelude.ARRAY_ELEMENTS_TYPE, expression);
               if (getArrayElementsType() == null) result.add(elementsType);
               result.add(AppExpression.make(FieldCallExpression.make(Prelude.ARRAY_AT, expression), new SmallIntegerExpression(0), true));
@@ -336,7 +335,7 @@ public class ConstructorExpressionPattern extends ConstructorPattern<Object> imp
       if (lamExpr == null) {
         return null;
       }
-      Expression body = lamExpr.getParameters().getNext().hasNext() ? new LamExpression(lamExpr.getResultSort(), lamExpr.getParameters().getNext(), lamExpr.getBody()) : lamExpr.getBody();
+      Expression body = lamExpr.getParameters().getNext().hasNext() ? new LamExpression(lamExpr.getParameters().getNext(), lamExpr.getBody()) : lamExpr.getBody();
       return NormalizingFindBindingVisitor.findBinding(body, lamExpr.getParameters()) ? null : Collections.emptyList();
     }
 
