@@ -47,7 +47,7 @@ public class ExpressionBinOpEngine implements BinOpEngine<Concrete.Expression> {
   }
 
   public static @NotNull Concrete.Expression parse(@NotNull Concrete.BinOpSequenceExpression expression, @NotNull ErrorReporter reporter, @NotNull TypingInfo typingInfo) {
-    Concrete.BinOpSequenceElem<Concrete.Expression> first = expression.getSequence().get(0);
+    Concrete.BinOpSequenceElem<Concrete.Expression> first = expression.getSequence().getFirst();
     if (first.fixity == Fixity.INFIX || first.fixity == Fixity.POSTFIX) {
       LocalReferable firstArg = new LocalReferable(Renamer.UNNAMED);
       List<Concrete.BinOpSequenceElem<Concrete.Expression>> newSequence = new ArrayList<>(expression.getSequence().size() + 1);
