@@ -1,13 +1,13 @@
 package org.arend.typechecking.levels;
 
-import org.arend.core.context.binding.LevelVariable;
 import org.arend.core.definition.Constructor;
 import org.arend.core.definition.DataDefinition;
 import org.arend.core.expr.DataCallExpression;
 import org.arend.core.sort.Level;
 import org.arend.core.sort.Sort;
-import org.arend.core.subst.LevelPair;
 import org.arend.core.subst.Levels;
+import org.arend.core.subst.ListLevels;
+import org.arend.ext.core.level.ConstLevel;
 import org.arend.typechecking.TypeCheckingTestCase;
 import org.junit.Test;
 
@@ -62,32 +62,32 @@ public class DataPolyTest extends TypeCheckingTestCase {
 
   @Test
   public void dataOmega() {
-    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D (A : \\Type) | con A");
-    assertEquals(Sort.STD, dataDefinition.getSort());
+    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) | con A");
+    assertEquals(new Sort(new Level(dataDefinition.getLevelParameters().getFirst()), ConstLevel.INFINITY), dataDefinition.getSort());
   }
 
   @Test
   public void dataOmegaExplicit() {
-    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D (A : \\Type) : \\Type | con A");
-    assertEquals(Sort.STD, dataDefinition.getSort());
+    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) : \\Type u | con A");
+    assertEquals(new Sort(new Level(dataDefinition.getLevelParameters().getFirst()), ConstLevel.INFINITY), dataDefinition.getSort());
   }
 
   @Test
   public void dataOmegaProp() {
-    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D (A : \\Type) (n : Nat) | con1 A | con2 (n = n)");
-    assertEquals(new Sort(new Level(LevelVariable.PVAR), new Level(LevelVariable.HVAR, 0, 0)), dataDefinition.getSort());
+    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) (n : Nat) | con1 A | con2 (n = n)");
+    assertEquals(new Sort(new Level(dataDefinition.getLevelParameters().getFirst()), ConstLevel.INFINITY), dataDefinition.getSort());
   }
 
   @Test
   public void dataOmegaPropExplicit() {
-    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D (A : \\Type) (n : Nat) : \\Type \\lp (\\max \\lh 0) | con1 (n = n) | con2 A");
-    assertEquals(new Sort(new Level(LevelVariable.PVAR), new Level(LevelVariable.HVAR, 0, 0)), dataDefinition.getSort());
+    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) (n : Nat) : \\Type u | con1 (n = n) | con2 A");
+    assertEquals(new Sort(new Level(dataDefinition.getLevelParameters().getFirst()), ConstLevel.INFINITY), dataDefinition.getSort());
   }
 
   @Test
   public void dataOmegaSet() {
-    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D (A : \\Type) (n : Nat) | con1 (n = n) | con2 A | con3 Nat");
-    assertEquals(new Sort(new Level(LevelVariable.PVAR), new Level(LevelVariable.HVAR, 0, 0)), dataDefinition.getSort());
+    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) (n : Nat) | con1 (n = n) | con2 A | con3 Nat");
+    assertEquals(new Sort(new Level(dataDefinition.getLevelParameters().getFirst()), ConstLevel.INFINITY), dataDefinition.getSort());
   }
 
   @Test
@@ -97,30 +97,30 @@ public class DataPolyTest extends TypeCheckingTestCase {
 
   @Test
   public void dataOmegaSetExplicit() {
-    typeCheckDef("\\data D (A : \\Type) (n : Nat) : \\Type | con1 (n = n) | con2 A | con3", 1);
+    typeCheckDef("\\data D (A : \\Type) (n : Nat) | con1 (n = n) | con2 A | con3");
   }
 
   @Test
   public void dataOmegaSetExplicitMax() {
-    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D (A : \\Type) (n : Nat) : \\Type \\lp (\\max \\lh 0) | con1 (n = n) | con2 A | con3 Nat");
-    assertEquals(new Sort(new Level(LevelVariable.PVAR), new Level(LevelVariable.HVAR, 0, 0)), dataDefinition.getSort());
+    DataDefinition dataDefinition = (DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) (n : Nat) : \\Type u | con1 (n = n) | con2 A | con3 Nat");
+    assertEquals(new Sort(new Level(dataDefinition.getLevelParameters().getFirst()), ConstLevel.INFINITY), dataDefinition.getSort());
   }
 
   @Test
   public void recursiveData() {
-    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D | con D")).getConstructors().get(0);
-    assertEquals(Levels.EMPTY, ((DataCallExpression) constructor.getParameters().getTypeExpr()).getLevels());
+    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D | con D")).getConstructors().getFirst();
+    assertEquals(Levels.EMPTY, ((DataCallExpression) constructor.getParameters().getType()).getLevels());
   }
 
   @Test
   public void recursiveData2() {
-    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D (A : \\Type) | con (D A)")).getConstructors().get(0);
-    assertEquals(LevelPair.STD, ((DataCallExpression) constructor.getParameters().getTypeExpr()).getLevels());
+    Constructor constructor = ((DataDefinition) typeCheckDef("\\data D.{u} (A : \\Type u) | con (D A)")).getConstructors().getFirst();
+    assertEquals(new ListLevels(new Level(constructor.getLevelParameters().getFirst())), ((DataCallExpression) constructor.getParameters().getType()).getLevels());
   }
 
   @Test
   public void recursiveDataError() {
-    typeCheckDef("\\data D | con (D \\levels 0 \\lh)", 1);
+    typeCheckDef("\\data D | con D.{0}", 1);
   }
 
   @Test
@@ -140,23 +140,56 @@ public class DataPolyTest extends TypeCheckingTestCase {
   @Test
   public void recursiveDataWithTuple() {
     typeCheckModule(
-      "\\record R (A : \\Sigma \\Type \\Type)\n" +
-      "\\data D | con (R (\\Sigma,D)) | con2 (R (D,\\Sigma))");
+      "\\record R (A : \\Sigma (\\Type 0) (\\Type 0))\n" +
+      "\\data D | con (R (\\Sigma,D)) | con2 (R (D,\\Sigma))", 2);
+  }
+
+  @Test
+  public void recursiveDataWithTuple2() {
+    typeCheckModule(
+      "\\record R.{p} (A : \\Sigma (\\Type p) (\\Type p))\n" +
+      "\\data D | con (R (\\Sigma,D)) | con2 (R (D,\\Sigma))", -1);
   }
 
   @Test
   public void recursiveDataWithConstructor() {
-    typeCheckModule(
-      "\\data Data | cons \\Type \\Type\n" +
-      "\\record R (A : Data)\n" +
-      "\\data D | con1 (R (cons (\\Sigma) D)) | con2 (R (cons D (\\Sigma)))");
+    typeCheckModule("""
+      \\data Data | cons \\Type \\Type
+      \\record R (A : Data)
+      \\data D | con1 (R (cons (\\Sigma) D)) | con2 (R (cons D (\\Sigma)))
+      """, -1);
   }
 
   @Test
   public void recursiveDataWithNew() {
-    typeCheckModule(
-      "\\record C (X Y : \\Type)\n" +
-      "\\record R (A : C)\n" +
-      "\\data D | con1 (R (\\new C (\\Sigma) D)) | con2 (R (\\new C D (\\Sigma)))");
+    typeCheckModule("""
+      \\record C (X Y : \\Type)
+      \\record R (A : C)
+      \\data D | con1 (R (\\new C (\\Sigma) D)) | con2 (R (\\new C D (\\Sigma)))
+      """);
+  }
+
+  @Test
+  public void levelTest() {
+    DataDefinition definition = (DataDefinition) typeCheckDef("\\data D (A1 : \\Set1) (A2 : \\Set2) | con (A2 -> D A1 A2) A1");
+    assertEquals(Sort.SetOfLevel(2), definition.getSort());
+  }
+
+  @Test
+  public void propTest() {
+    DataDefinition definition = (DataDefinition) typeCheckDef("\\data D (A1 : \\Prop) (A2 : \\Set2) | con (A2 -> D A1 A2) A1");
+    assertEquals(Sort.PROP, definition.getSort());
+  }
+
+  @Test
+  public void setTest() {
+    DataDefinition definition = (DataDefinition) typeCheckDef("\\data D (A1 : \\Prop) (A2 : \\Set2) | con1 (A2 -> D A1 A2) A1 | con2");
+    assertEquals(Sort.SetOfLevel(2), definition.getSort());
+  }
+
+  @Test
+  public void setTest2() {
+    DataDefinition definition = (DataDefinition) typeCheckDef("\\data D (A1 : \\Prop) (A2 : \\Set2) | con1 {d1 d2 : D A1 A2} (A2 -> d1 = d2) A1 | con2");
+    assertEquals(Sort.SET0, definition.getSort());
   }
 }
